--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
     "svelte-icons-pack": "^2.1.0",
+    "svelte-routing": "^1.6.0",
     "svelte-sheets": "^1.0.0"
   },
   "devDependencies": {
