--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tauri-apps/cli": "^1.2.2",
     "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^18.7.10",
+    "@zerodevx/svelte-toast": "^0.9.3",
     "sass": "^1.59.3",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.0",
