--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ calamine = "0.19.1"
 base64 = "0.21.0"
 anyhow = "1.0.70"
 data-encoding = "2.3.3"
+thiserror = "1.0.40"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
