--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ data-encoding = "2.3.3"
 thiserror = "1.0.40"
 lazy_static = "1.4.0"
 chrono = "0.4.19"
+pdf-extract = "0.6.4"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
