--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte-sheets": "^1.0.0",
     "svelte-simple-modal": "^1.5.2",
     "svelte-sortlist": "^1.0.3",
+    "svelte-toasts": "^1.1.2",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
   },
@@ -29,10 +30,13 @@
     "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^18.7.10",
     "@zerodevx/svelte-toast": "^0.9.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "sass": "^1.59.3",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.0",
     "svelte-preprocess": "^5.0.0",
+    "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "typescript": "^4.6.4",
     "vite": "^4.0.0"
